--- a/就业班.md
+++ b/就业班.md
@@ -3033,7 +3033,7 @@ self 是形参，可以为其他，对应就行
 > 1. 能够提升代码的重用率，即开发一个类，可以在多个子功能中直接使用
 > 2. 继承能够有效的进行代码的管理，当某个类有问题只要修改这个类就行，而其继承这个类的子类往往不需要就修改
 
-多态：多种形态。
+##### 多态：多种形态
 
 子类重写方法，调用子类的；没重写，调用父类的，但调用的是同一个方法(名)  -- **只需写成父类方法的调用方式**。
 
@@ -3278,11 +3278,537 @@ print(Parent.x, Child1.x, Child2.x)  # 3 2 3
 
 #### 静态方法和类方法
 
+##### 类属性、实例属性
+
+它们在定义和使用中有所区别，而最本质的区别是内存中保存的位置不同，
+
+- 实例属性属于对象， 在**每个对象**中都要保存**一份** 
+- 类属性属于类， 在**内存中**只保存**一份** 
+
+**实例对象通过`__class__` 属性指向类对象**， **对象名.__class__.类属性名="xxx"： 可以修改类属性** 
+
+应用场景：通过类创建实例对象时，如果每个对象需要具有相同名字的属性，那么就使用类属性，用一份既可
+
+##### 实例方法、静态方法和类方法
+
+实例方法、静态方法和类方法，三种方法在内存中都归属于类，区别在于调用方式不同。 
+
+- 实例方法：由对象调用；至少一个self参数(通过它来传递实例的属性和方法)；执行实例方法时，自动将调用该方法的对象赋值给self(python解释器传入：实例对象引用)
+- 类方法：由对象/类调用；使用装饰器@classmethod；至少一个cls参数(当前类对象， 通过它来传递类的属性和方法 ，不能传实例的属性和方法)；执行类方法时，自动将调用该方法的类赋值给cls(python解释器传入：类对象引用)
+- 静态方法：由对象/类调用；使用装饰器@staticmethod；无默认参数；方法体 中不能使用类或实例的任何属性和方法
+
+```python
+class Foo(object):
+    def __init__(self, name):
+        self.name = name
+    def ord_func(self):  # self 实例对象的引用
+        """ 定义实例方法，至少有一个self参数 """
+        print('实例方法')  # print(self.name)
+    @classmethod
+    def class_func(cls):  # cls 类对象的引用
+        """ 定义类方法，至少有一个cls参数 """
+        print('类方法')
+    @staticmethod
+    def static_func():
+        """ 定义静态方法 ，无默认参数"""  # 静态方法存在的目的是做一些不需要参数的操作，且归为一类
+        print('静态方法')
+f = Foo("中国")
+f.ord_func()  # 调用实例方法
+Foo.class_func()  # 调用类方法
+Foo.static_func()  # 调用静态方法
+```
+
+对比
+
+- 相同点：对于所有的方法而言，均属于类，所以 在**内存中**也只保存**一份**
+- 不同点：方法**调用者不同**、调用方法时自动**传入的参数不同**
+- 类对象只能调用 类方法、静态方法，实例对象全可以调用
+
+#### property属性
+
+ 一种用起来像是使用的实例属性一样的特殊属性，可以对应于某个方法 
+
+```python
+# ############### 定义 ###############
+class Foo:
+    def func(self):
+        pass
+    # 定义property属性
+    @property  # 使调用方法时之间写方法名
+    def prop(self):
+        pass  # 必须返回一个值
+# ############### 调用 ###############
+foo_obj = Foo()
+foo_obj.func()  # 调用实例方法
+foo_obj.prop  # 调用property属性  可读性更高
+```
+
+property属性的定义和调用要注意一下几点：
+
+- **定义时**，在实例方法的基础上添加 @property 装饰器；并且**仅有一个self参数**
+
+- 调用时，无需括号
+
+  ```python
+  方法：foo_obj.func()
+  property属性：foo_obj.prop
+  ```
+
+##### 示例
+
+> 对于京东商城中显示电脑主机的列表页面，每次请求不可能把数据库中的所有内容都显示到页面上，而是通过分页的功能局部显示，所以在向数据库中请求数据时就要显示的指定获取从第m条到第n条的所有数据 这个分页的功能包括：
+>
+> - 根据用户请求的当前页和总数据条数计算出 m 和 n
+> - 根据m 和 n 去数据库中请求数据
+>
+> 不分页返回全部数据，需要的请求太多，分页后只需返回这一页的数据
+
+```python
+class Pager:
+    def __init__(self, current_page):
+        self.current_page = current_page  # 用户当前请求的页码（第一页、第二页...）
+        self.per_items = 10  # 每页默认显示10条数据
+    @property
+    def start(self):
+        val = (self.current_page - 1) * self.per_items
+        return val
+    @property
+    def end(self):
+        val = self.current_page * self.per_items
+        return val
+p = Pager(1)
+p.start  # 就是起始值，即：m  把属性对应成方法调用  封装的体现：不用管计算过程，返回结果
+p.end  # 就是结束值，即：n
+```
+
+ property属性的功能是：property属性内部进行一系列的逻辑计算，最终将计算结果返回。 
+
+##### property属性创建的两种方式
+
+- 装饰器 即：在方法上应用装饰器
+- 类属性 即：在类中定义值为property对象的类属性
+
+###### 装饰器方式
+
+在类的实例方法上应用@property装饰器
+
+Python中的类有`经典类`和`新式类`，`新式类`的属性比`经典类`的属性丰富。（ py2 如果类继object，那么该类是新式类，py3默认继承object）
+
+经典类，具有**一种**@property装饰器，即上面的方式
+
+新式类，具有**三种**@property装饰器
+
+```python
+class Goods:
+    """python3中默认继承object类
+       以python2、3执行此程序的结果不同，因为只有在python3中才有@xxx.setter  @xxx.deleter
+    """
+    @property  # 写在最前面
+    def price(self):
+        print('@property')
+    @price.setter  # @方法名.setter
+    def price(self, value):  # 方法名需一致
+        print('@price.setter')
+    @price.deleter  # @方法名.deleter
+    def price(self):
+        print('@price.deleter')
+obj = Goods()
+obj.price          # 自动执行 @property 修饰的 price 方法，并获取方法的返回值
+obj.price = 123    # 自动执行 @price.setter 修饰的 price 方法，并将 123 赋值给方法的参数
+del obj.price      # 自动执行 @price.deleter 修饰的 price 方法
+```
+
+- 经典类中的属性只有一种访问方式，其对应被 @property 修饰的方法
+- 新式类中的属性有三种访问方式，并分别对应了三个被@property、@方法名.setter、@方法名.deleter修饰的方法
+
+由于新式类中具有三种访问方式，根据几个属性的访问特点，分别将三个方法定义为对同一个属性：**获取、修改、删除**
+
+```python
+class Goods(object):
+    def __init__(self):
+        self.original_price = 100  # 原价
+        self.discount = 0.8  # 折扣
+    @property
+    def price(self):
+        new_price = self.original_price * self.discount  # 实际价格 = 原价 * 折扣
+        return new_price
+    @price.setter
+    def price(self, value):  # value = 200
+        self.original_price = value
+    @price.deleter
+    def price(self):
+        del self.original_price
+obj = Goods()
+obj.price         # 获取商品价格
+obj.price = 200   # 修改商品原价
+del obj.price     # 删除商品原价
+```
+
+###### 类属性方式
+
+方式：创建值为property对象的类属性
+
+当使用类属性的方式创建property属性时，`经典类`和`新式类`无区别
+
+```python
+class Foo:
+    def get_bar(self):
+        return 'laowang'
+    BAR = property(get_bar)  # 类属性
+obj = Foo()
+reuslt = obj.BAR  # 自动调用get_bar方法，并获取方法的返回值
+print(reuslt)
+```
+
+property方法中有个四个参数
+
+- 第一个参数是方法名，调用 `对象.属性` 时自动触发执行方法
+- 第二个参数是方法名，调用 `对象.属性 ＝ XXX` 时自动触发执行方法
+- 第三个参数是方法名，调用 `del 对象.属性` 时自动触发执行方法
+- 第四个参数是字符串，调用 `对象.属性.__doc__ `，此参数是该属性的描述信息
+
+```python
+class Foo(object):
+    def get_bar(self):
+        print("getter...")
+        return 'laowang'
+    def set_bar(self, value): 
+        """必须两个参数"""
+        print("setter...")
+        return 'set value' + value
+    def del_bar(self):
+        print("deleter...")
+        return 'laowang'
+    BAR = property(get_bar, set_bar, del_bar, "description...")
+obj = Foo()
+obj.BAR  # 自动调用第一个参数中定义的方法：get_bar
+obj.BAR = "alex"  # 自动调用第二个参数中定义的方法：set_bar方法，并将“alex”当作参数传入
+desc = Foo.BAR.__doc__  # 自动获取第四个参数中设置的值：description...
+del obj.BAR  # 自动调用第三个参数中定义的方法：del_bar方法
+```
+
+ 由于`类属性方式`创建property属性具有3种访问方式，根据几个属性的访问特点，分别将三个方法定义为对同一个属性：**获取、修改、删除** 
+
+上述对应示例代码可修改为`类属性方式`
+
+> WEB框架 Django 的视图中 request.POST 就是使用的类属性的方式创建的属性 
+
+##### property属性-应用
+
+私有属性目的：不想让对象引用直接获取/修改值
+
+get 需要有返回值，set 可以不需要返回值
+
+###### 1. 私有属性添加getter和setter方法
+
+```python
+# python 不建议，其他语言常见
+class Money(object):
+    def __init__(self):
+        self.__money = 0
+    def getMoney(self):
+        return self.__money
+    def setMoney(self, value):
+        if isinstance(value, int):
+            self.__money = value
+        else:
+            print("error:不是整型数字")
+```
+
+###### 2. 使用property升级getter和setter方法
+
+```python
+class Money(object):
+    def __init__(self):
+        self.__money = 0
+    def getMoney(self):
+        return self.__money
+    def setMoney(self, value):  # 可进行数据过滤等
+        if isinstance(value, int):
+            self.__money = value
+        else:
+            print("error:不是整型数字")
+    # 定义一个属性，当对这个money设置值时调用setMoney,当获取值时调用getMoney
+    money = property(getMoney, setMoney)  
+a = Money()
+a.money = 100  # 调用setMoney方法
+print(a.money)  # 调用getMoney方法
+#100
+```
+
+###### 3. 使用property取代getter和setter方法
+
+- 重新实现一个属性的设置和读取方法,可做边界判定
+
+```python
+class Money(object):
+    def __init__(self):
+        self.__money = 0
+    # 使用装饰器对money进行装饰，那么会自动添加一个叫money的属性，当调用获取money的值时，调用装饰的方法
+    @property
+    def money(self):
+        return self.__money
+    # 使用装饰器对money进行装饰，当对money设置值时，调用装饰的方法
+    @money.setter
+    def money(self, value):
+        if isinstance(value, int):
+            self.__money = value
+        else:
+            print("error:不是整型数字")
+a = Money()
+a.money = 100
+print(a.money)
+```
+
+##### 总结
+
+- 定义property属性共有两种方式，分别是【装饰器】和【类属性】，而【装饰器】方式针对经典类和新式类又有所不同。
+- 通过使用property属性，能够简化调用者在获取数据的流程
+
+#### 魔法属性
+
+无论人或事物往往都有不按套路出牌的情况，Python的类属性也是如此，存在着一些具有特殊含义的属性。
+
+##### `__doc__`
+
+- 表示类的描述信息
+
+```python
+class Foo:
+    """ 描述类信息，这是用于看电影的神器 """
+    def func(self):
+        pass
+print(Foo.__doc__)
+#输出：类的描述信息
+```
+
+##### `__module__ `和 `__class__`
+
+- __module__ 表示当前操作的对象在那个模块
+- __class__ 表示当前操作的对象的类是什么
+
+```python
+# test.py
+class Person(object):
+    def __init__(self):
+        self.name = 'laowang'
+# main.py
+from test import Person
+obj = Person()
+print(obj.__module__)  # 输出 test 即：输出模块
+print(obj.__class__)  # 输出 test.Person 即：输出类
+```
+
+##### `__init__`
+
+- **初始化方法**，通过类创建对象时，自动触发执行
+
+```python
+class Person:
+    def __init__(self, name):
+        self.name = name
+        self.age = 18
+obj = Person('laowang')  # 自动执行类中的 __init__ 方法
+```
+
+##### `__del__`
+
+- 当对象在内存中被释放时，自动触发执行。
+
+注：此方法一般无须定义，因为Python是一门高级语言，程序员在使用时无需关心内存的分配和释放，因为此工作都是交给Python解释器来执行，所以，`__del__`的调用是由解释器在进行垃圾回收时自动触发执行的。
+
+```python
+class Foo:
+    def __del__(self):
+        pass
+```
+
+##### `__call__`
+
+- 对象后面加括号，触发执行。
+
+注：`__init__`方法的执行是由创建对象触发的，即：`对象 = 类名()` ；而对于 `__call__` 方法的执行是由对象后加括号触发的，即：`对象()` 或者 `类()()`
+
+```python
+class Foo:
+    def __init__(self):
+        pass
+    def __call__(self, *args, **kwargs):
+        print('__call__')
+obj = Foo()  # 执行 __init__
+obj()  # 执行 __call__
+```
+
+##### `__dict__`
+
+- 类或对象中的所有属性
+
+类的实例属性属于对象；类中的类属性和方法等属于类，即：
+
+```python
+class Province(object):
+    country = 'China'
+    def __init__(self, name, count):
+        self.name = name
+        self.count = count
+    def func(self, *args, **kwargs):
+        print('func')
+# 获取类的属性，即：类属性、方法、
+print(Province.__dict__)
+# 输出：{'__dict__': <attribute '__dict__' of 'Province' objects>, '__module__': '__main__', 'country': 'China', '__doc__': None, '__weakref__': <attribute '__weakref__' of 'Province' objects>, 'func': <function Province.func at 0x101897950>, '__init__': <function Province.__init__ at 0x1018978c8>}
+# __init__ 变量名  指向一个函数
+obj1 = Province('山东', 10000)
+print(obj1.__dict__)  # 获取 对象obj1 的属性  输出：{'count': 10000, 'name': '山东'}
+obj2 = Province('山西', 20000)
+print(obj2.__dict__)  # 获取 对象obj2 的属性  # 输出：{'count': 20000, 'name': '山西'}
+```
+
+##### `__str__`
+
+- 如果一个类中定义了`__str__`方法，那么在 **获取对象的描述** 时，默认输出该方法的返回值。
+
+```python
+class Foo:
+    def __str__(self):
+        return 'laowang'
+obj = Foo()
+print(obj)  # 输出：laowang
+dis = "当前对象的描述：%s" % obj
+```
+
+##### `__getitem__`、`__setitem__`、`__delitem__`
+
+- 用于索引操作，如字典。以上分别表示获取、设置、删除数据
+
+```python
+class Foo(object):
+    # for item in 可迭代对象，自己实现时有如下方法，可作为字典
+    def __getitem__(self, key):  
+        print('__getitem__', key)
+    def __setitem__(self, key, value):
+        print('__setitem__', key, value)
+    def __delitem__(self, key):
+        print('__delitem__', key)
+obj = Foo()
+result = obj['k1']      # 自动触发执行 __getitem__
+obj['k2'] = 'laowang'   # 自动触发执行 __setitem__
+del obj['k1']           # 自动触发执行 __delitem__
+```
+
+##### `__getslice__`、`__setslice__`、`__delslice__`
+
+- 该三个方法用于分片操作，如：列表
+
+```python
+class Foo(object):
+    # for item in 可迭代对象，自己实现时有如下方法，可作为列表
+    def __getslice__(self, i, j):
+        print('__getslice__', i, j)
+    def __setslice__(self, i, j, sequence):
+        print('__setslice__', i, j)
+    def __delslice__(self, i, j):
+        print('__delslice__', i, j)
+obj = Foo()
+obj[-1:1]                   # 自动触发执行 __getslice__  # 取不出值
+obj[0:1] = [11,22,33,44]    # 自动触发执行 __setslice__  # 把源列表的值替换掉
+del obj[0:2]                # 自动触发执行 __delslice__
+```
+
+#### 面向对象设计
+
+- 继承 - 是基于Python中的属性查找(如X.name)
+- 多态 - 在X.method方法中，method的意义取决于X的类型
+- 封装 - 方法和运算符实现行为，数据隐藏默认是一种惯例
+
+#### with与 上下文管理器
+
+对于系统资源如文件、数据库连接、socket 而言，应用程序打开这些资源并执行完业务逻辑之后，必须做的一件事就是要关闭（断开）该资源。
+
+比如 Python 程序打开一个文件，往文件中写内容，写完之后，就要关闭该文件，否则会出现什么情况呢？极端情况下会出现 "Too many open files" 的错误，因为系统允许你打开的最大文件数量是有限的。
+
+普通的open() - write() - close() 方式，如果在调用 write 的过程中，出现了异常进而导致后续代码无法继续执行，close 方法无法被正常调用，因此资源就会一直被该程序占用者释放。 
+
+ 改进是对可能发生异常的代码处进行 try 捕获，使用 try/finally 语句。 只要把 close() 放在 finally 代码中，文件就一定会关闭。 
+
+ 一种更加简洁、优雅的方式就是用 with 关键字。open 方法的返回值赋值给变量 f，当离开 with 代码块的时候，系统会自动调用 f.close() 方法， with 的作用和使用 try/finally 语句是一样的。 
+
+```python
+def m3():
+    with open("output.txt", "r") as f:
+        f.write("Python之禅")
+```
+
+ with 的原理要涉及到上下文管理器（Context Manager）。 
+
+##### 什么是上下文(context)
+
+> 上下文在不同的地方表示不同的含义，要感性理解。context其实说白了，和文章的上下文是一个意思，在通俗一点，我觉得叫环境更好。....
+>
+> 林冲大叫一声“啊也！”....
+>
+> 问:这句话林冲的“啊也”表达了林冲怎样的心里？答:啊你妈个头啊！
+>
+> 看，一篇文章，给你摘录一段，没前没后，你读不懂，因为有语境，就是语言环境存在，一段话说了什么，要通过上下文(文章的上下文)来推断。
+>
+> app点击一个按钮进入一个新的界面，也要**保存**你是在哪个屏幕跳过来的等等**信息**，以便你点击返回的时候能正确跳回，如果不存肯定就无法正确跳回了。
+>
+> 看这些都是上下文的典型例子，理解成环境就可以，(而且上下文虽然叫上下文，但是程序里面一般都只有上文而已，只是叫的好听叫上下文。进程中断在操作系统中是有上有下的，这个高深的问题就不深究了)
+
+##### 上下文管理器
+
+任何实现了 `__enter__()` 和 `__exit__()` 方法的对象都可称之为上下文管理器，上下文管理器对象可以使用 with 关键字。显然，文件（file）对象也实现了上下文管理器。
+
+那么文件对象是如何实现这两个方法的呢？模拟实现一个文件类，让该类实现 `__enter__()` 和 `__exit__()` 方法。
+
+```python
+class File():
+    def __init__(self, filename, mode):
+        self.filename = filename
+        self.mode = mode
+    def __enter__(self):
+        print("entering")
+        self.f = open(self.filename, self.mode)
+        return self.f  # 返回open的返回值
+    def __exit__(self, *args):
+        print("will exit")
+        self.f.close()  # self.f 已经存储，是上下文
+with File('out.txt', 'w') as f:  
+    # File('out.txt', 'w') - 创建实例对象，返回其引用
+    # with 检查 实例对象 是否为 上下文管理器（有无__enter__()和__exit__()方法）
+    # 是上下文管理器，自动调用__enter__()方法，其返回值是什么，f 就是什么  f也指向open
+    # with 判断File实例化的对象 有无__enter__()和__exit__()方法
+    print("writing")
+    f.write('hello, python')  # 无论是否出现异常，也会调用__exit__()方法
+```
+
+`__enter__() `方法返回资源对象，这里就是你将要打开的那个文件对象，`__exit__()` 方法处理一些清除工作。
+
+因为 File 类实现了上下文管理器，现在就可以使用 with 语句了。
+
+##### 实现上下文管理器的另外方式
+
+Python 还提供了一个 contextmanager 的装饰器，更进一步简化了上下文管理器的实现方式。通过 yield 将函数分割成两部分，yield 之前的语句在 `__enter__` 方法中执行，yield 之后的语句在 `__exit__` 方法中执行。紧跟在 yield 后面的值是函数的返回值。
+
+```python
+from contextlib import contextmanager
+@contextmanager
+def my_open(path, mode):  # 普通函数
+    f = open(path, mode)
+    yield f  # yield返回什么，with中f是什么，yield之后是 做完/异常 执行的事情
+    f.close()
+with my_open('out.txt', 'w') as f:
+    f.write("hello , the simplest context manager")
+```
+
+##### 总结
+
+Python 提供了 with 语法用于简化资源操作的后续清除操作，是 try/finally 的替代方法，实现原理建立在上下文管理器之上。此外，Python 还提供了一个 contextmanager 装饰器，更进一步简化上下管理器的实现方式。
+
+### 5 Mysql
 
 
 
 
-return 类名（）   代表什么   返回一个实例对象？
 
 
 
@@ -3299,6 +3825,40 @@ return 类名（）   代表什么   返回一个实例对象？
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+return 类名（）   代表什么   返回一个实例对象的引用
 
 # TODO:
 
