update mysql select

--- a/就业班.md
+++ b/就业班.md
@@ -3905,12 +3905,58 @@ SQL(Structured Query Language)是结构化查询语言，是一种用来**操作
 | YEAR      | 1        | '2017'                                                |
 | TIMESTAMP | 4        | '1970-01-01 00:00:01' UTC ~ '2038-01-01 00:00:01' UTC |
 
+##### 数据库设计
+
+关系型数据库建议在E-R模型的基础上，抽取出来模型与关系，制定出表结构 
+
+在开发中有很多设计数据库的软件，常用的如power designer，db desinger等，这些软件可以直观的看到实体及实体间的关系
+
+###### 三范式
+
+- 经过研究和对使用中问题的总结，对于设计数据库提出了一些规范，这些规范被称为范式(Normal Form)
+
+- 目前有迹可寻的共有8种范式，一般需要遵守3范式即可
+
+- 第一范式（1NF）：强调的是列的原子性，即列不能够再分成其他几列。
+
+  > 考虑这样一个表：【联系人】（姓名，性别，电话） 如果在实际场景中，一个联系人有家庭电话和公司电话，那么这种表结构设计就没有达到 1NF。要符合 1NF 我们只需把列（电话）拆分，即：【联系人】（姓名，性别，家庭电话，公司电话）。1NF 很好辨别，但是 2NF 和 3NF 就容易搞混淆。
+
+  
+
+-  第二范式（2NF）：首先是 1NF，另外包含两部分内容，一是表必须有一个主键；二是没有包含在主键中的列必须完全依赖于主键，而不能只依赖于主键的一部分。
+
+  > 考虑一个订单明细表：【OrderDetail】（OrderID，ProductID，UnitPrice，Discount，Quantity，ProductName）。 因为我们知道在一个订单中可以订购多种产品，所以单单一个 OrderID 是不足以成为主键的，主键应该是（OrderID，ProductID）。显而易见 Discount（折扣），Quantity（数量）完全依赖（取决）于主键（OderID，ProductID），而 UnitPrice，ProductName 只依赖于 ProductID。所以 OrderDetail 表不符合 2NF。不符合 2NF 的设计容易产生冗余数据。
+  >
+  > 可以把【OrderDetail】表拆分为【OrderDetail】（OrderID，ProductID，Discount，Quantity）和【Product】（ProductID，UnitPrice，ProductName）来消除原订单表中UnitPrice，ProductName多次重复的情况。
+
+  
+
+- 第三范式（3NF）：首先是 2NF，另外非主键列必须直接依赖于主键，不能存在传递依赖。即不能存在：非主键列 A 依赖于非主键列 B，非主键列 B 依赖于主键的情况。
+
+  > 考虑一个订单表【Order】（OrderID，OrderDate，CustomerID，CustomerName，CustomerAddr，CustomerCity）主键是（OrderID）。 其中 OrderDate，CustomerID，CustomerName，CustomerAddr，CustomerCity 等非主键列都完全依赖于主键（OrderID），所以符合 2NF。不过问题是 CustomerName，CustomerAddr，CustomerCity 直接依赖的是 CustomerID（非主键列），而不是直接依赖于主键，它是通过传递才依赖于主键，所以不符合 3NF。 通过拆分【Order】为【Order】（OrderID，OrderDate，CustomerID）和【Customer】（CustomerID，CustomerName，CustomerAddr，CustomerCity）从而达到 3NF。 *第二范式（2NF）和第三范式（3NF）的概念很容易混淆，区分它们的关键点在于，2NF：非主键列是否完全依赖于主键，还是依赖于主键的一部分；3NF：非主键列是直接依赖于主键，还是直接依赖于非主键列。
+
+
+###### E-R模型
+
+  - E表示entry，实体，设计实体就像定义一个类一样，指定从哪些方面描述对象，一个实体转换为数据库中的一个表
+  - R表示relationship，关系，关系描述两个实体之间的对应规则，关系的类型包括包括一对一、一对多、多对多
+  - 关系也是一种数据，需要通过一个字段存储在表中
+  - 实体A对实体B为1对1，则在表A或表B中创建一个字段，存储另一个表的主键值
+  - 实体A对实体B为1对多：在表B中创建一个字段，存储表A的主键值
+  - 实体A对实体B为多对多：新建一张表C，这个表只有两个字段，一个用于存储A的主键值，一个用于存储B的主键值
+
+###### 逻辑删除
+
+- 对于重要数据，并不希望物理删除，一旦删除，数据无法找回
+- 删除方案：设置isDelete的列，类型为**bit**，表示逻辑删除，默认值为0
+- 对于非重要数据，可以进行物理删除
+
 #### Mysql 基本使用
 
-增删改查(CURD)：创建（Create）、更新（Update）、读取（Read）、删除（Delete）
+##### 数据库
 
 ```sql
--- 数据库的操作
+-- 数据库的操作：查看、创建、删除
 
     -- 链接数据库
     mysql -uroot -p
@@ -3950,13 +3996,17 @@ SQL(Structured Query Language)是结构化查询语言，是一种用来**操作
     -- drop database 数据库名;
     drop database python04;
     -- drop database `python-04`
+```
 
--- 数据表的操作
+##### 数据表
 
-    -- 查看当前数据库中所有表
+```sql
+-- 数据表的操作：查看、创建、修改、删除
+
+-- 查看当前数据库中所有表
     show tables;
     
-    -- 创建表
+-- 创建表
     -- auto_increment表示自动增长
     -- not null 表示不能为空
     -- primary key 表示主键
@@ -3970,7 +4020,7 @@ SQL(Structured Query Language)是结构化查询语言，是一种用来**操作
     );
     -- 最后一个不要写 ','   约束没有顺序
 
-    -- 查看表结构
+-- 查看表结构
     -- desc 数据表的名字;
     desc xxxxx;
 
@@ -4022,12 +4072,16 @@ SQL(Structured Query Language)是结构化查询语言，是一种用来**操作
     -- alter table 表名 drop 列名;
     alter table students drop high;
 
-    -- 删除表  尽量不删
+-- 删除表  尽量不删
     -- drop database 数据库;
     -- drop table 数据表/表名;
     drop table xxxxx;
+```
 
--- 增删改查(curd)
+##### CURD
+
+```sql
+-- 增删改查(CURD)：创建（Create）、更新（Update）、读取（Read）、删除（Delete）
 
     -- 增加
         -- 全列插入
@@ -4067,7 +4121,7 @@ SQL(Structured Query Language)是结构化查询语言，是一种用来**操作
         insert into students values(default, "西施", 20, "女", 1, "1990-01-01"), (default, "王昭君", 20, "女", 1, "1990-01-01");
 
     -- 修改
-    -- update 表名 set 列1=值1,列2=值2... where 条件;
+        -- update 表名 set 列1=值1,列2=值2... where 条件;
         update students set gender=1; -- 全部都改
         update students set gender=1 where name="小李飞刀"; -- 只要name是小李飞刀的 全部的修改
         update students set gender=1 where id=3; -- 只要id为3的 进行修改
@@ -4106,11 +4160,472 @@ SQL(Structured Query Language)是结构化查询语言，是一种用来**操作
         update students set is_delete=1 where id=6;
 ```
 
+#### Mysql 查询
 
+```sql
+-- 数据的准备
+	-- 创建一个数据库
+	create database python_test charset=utf8;
 
+	-- 使用一个数据库
+	use python_test;
 
+	-- 显示使用的当前数据是哪个?
+	select database();
 
+	-- 创建一个数据表
+	-- students表
+	create table students(
+	    id int unsigned primary key auto_increment not null,
+	    name varchar(20) default '',
+	    age tinyint unsigned default 0,
+	    height decimal(5,2),
+	    gender enum('男','女','中性','保密') default '保密',
+	    cls_id int unsigned default 0,
+	    is_delete bit default 0
+	);
 
+	-- classes表
+	create table classes (
+	    id int unsigned auto_increment primary key not null,
+	    name varchar(30) not null
+	);
+	-- 向students表中插入数据
+    insert into students values
+    (0,'小明',18,180.00,2,1,0),
+    (0,'小月月',18,180.00,2,2,1),
+    (0,'彭于晏',29,185.00,1,1,0),
+    (0,'刘德华',59,175.00,1,2,1),
+    (0,'黄蓉',38,160.00,2,1,0),
+    (0,'凤姐',28,150.00,4,2,1),
+    (0,'王祖贤',18,172.00,2,1,1),
+    (0,'周杰伦',36,NULL,1,1,0),
+    (0,'程坤',27,181.00,1,2,0),
+    (0,'刘亦菲',25,166.00,2,2,0),
+    (0,'金星',33,162.00,3,3,1),
+    (0,'静香',12,180.00,2,4,0),
+    (0,'郭靖',12,170.00,1,4,0),
+    (0,'周杰',34,176.00,2,5,0);
+
+    -- 向classes表中插入数据
+    insert into classes values (0, "python_01期"), (0, "python_02期"), (0, "python_04期");
+    
+-- 查询
+	-- 查询所有字段
+	-- select * from 表名;
+	select * from students;
+	select * from classes;
+	select id, name from classes;
+
+	-- 查询指定字段
+	-- select 列1,列2,... from 表名;
+	select name, age from students;
+	
+	-- 使用 as 给字段起别名
+	-- select 字段 as 名字.... from 表名;
+	select name as 姓名, age as 年龄 from students;
+
+	-- select 表名.字段 .... from 表名;
+	select students.name, students.age from students;
+
+	-- 可以通过 as 给表起别名
+	-- select 别名.字段 .... from 表名 as 别名;
+	select students.name, students.age from students;
+	select s.name, s.age from students as s;
+	-- 失败的select students.name, students.age from students as s;
+
+	-- 消除重复行
+	-- distinct 字段
+	select distinct gender from students;    
+```
+
+##### 条件
+
+```sql
+-- 条件查询
+    -- select .... from 表名 where .....
+	
+	-- 比较运算符
+		-- > <  大于 小于
+		-- 查询大于18岁的信息
+		select * from students where age>18;
+		select id,name,gender from students where age>18;
+		select * from students where age<18;
+
+		-- >=  <=  大于等于 小于等于
+		-- 查询小于或者等于18岁的信息
+
+		-- =
+		-- 查询年龄为18岁的所有学生的名字
+		select * from students where age=18;
+
+		-- != 或者 <>  不等于
+
+	-- 逻辑运算符
+		-- and
+		-- 18到28之间的所以学生信息
+		select * from students where age>18 and age<28;
+		-- 失败select * from students where age>18 and <28;
+
+		-- 18岁以上的女性
+		select * from students where age>18 and gender="女";
+		select * from students where age>18 and gender=2;
+
+		-- or
+		-- 18以上或者身高查过180(包含)以上
+		select * from students where age>18 or height>=180;
+
+		-- not
+		-- 不在 18岁以上的女性 这个范围内的信息
+		-- select * from students where not age>18 and gender=2;
+		select * from students where not (age>18 and gender=2);
+
+		-- 年龄不是小于或者等于18 并且是女性
+		select * from students where (not age<=18) and gender=2;
+
+	-- 模糊查询
+		-- like 
+		-- % 替换0个或者多个
+		-- _ 替换1个
+		-- 查询姓名中 以 "小" 开始的名字
+		select name from students where name="小";
+		select name from students where name like "小%";
+
+		-- 查询姓名中 有 "小" 所有的名字
+		select name from students where name like "%小%";
+
+		-- 查询有2个字的名字
+		select name from students where name like "__";
+
+		-- 查询有3个字的名字
+		select name from students where name like "___";
+
+		-- 查询至少有2个字的名字
+		select name from students where name like "__%";
+
+		-- rlike 正则
+		-- 查询以 周开始的姓名
+		select name from students where name rlike "^周.*";
+
+		-- 查询以 周开始、伦结尾的姓名
+		select name from students where name rlike "^周.*伦$";
+
+	-- 范围查询
+		-- in (1, 3, 8)表示在一个非连续的范围内
+		-- 查询 年龄为18、34的姓名
+		select name,age from students where age=18 or age=34;
+		select name,age from students where age=18 or age=34 or age=12;
+		select name,age from students where age in (12, 18, 34);
+
+		-- not in 不非连续的范围之内
+		-- 年龄不是 18、34岁之间的信息
+		select name,age from students where age not in (12, 18, 34);
+
+		-- between ... and ...表示在一个连续的范围内
+		-- 查询 年龄在18到34之间的的信息
+		select name, age from students where age between 18 and 34;
+		
+		-- not between ... and ...表示不在一个连续的范围内
+		-- 查询 年龄不在在18到34之间的的信息
+		select * from students where age not between 18 and 34;
+		-- 正确的select * from students where not age between 18 and 34;
+		-- 失败的select * from students where age not (between 18 and 34);
+		-- not between 是一种用法  不是取反  上面那个是 取反 not age ...
+
+	-- 空判断
+		-- 判空is null
+		-- 查询身高为空的信息
+		select * from students where height is null;
+		select * from students where height is NULL;
+		select * from students where height is Null;
+
+		-- 判非空is not null
+		select * from students where height is not null;
+```
+
+**where**后面支持多种运算符，进行条件的处理：**比较运算符、逻辑运算符、模糊查询、范围查询、空判断**
+
+##### 排序
+
+```sql
+-- 排序
+    -- select * from 表名 order by 列1 asc|desc [,列2 asc|desc,...]
+    -- 将行数据按照列1进行排序，如果某些行列1的值相同时，则按照列2排序，以此类推
+    
+	-- order by 字段
+	-- asc从小到大排列，即升序  默认
+	-- desc从大到小排序，即降序
+
+	-- 查询年龄在18到34岁之间的男性，按照年龄从小到到排序
+	select * from students where (age between 18 and 34) and gender=1;
+	select * from students where (age between 18 and 34) and gender=1 order by age;
+	select * from students where (age between 18 and 34) and gender=1 order by age asc;
+
+	-- 查询年龄在18到34岁之间的女性，身高从高到矮排序
+	select * from students where (age between 18 and 34) and gender=2 order by height desc;
+	-- 相同值时按照主键升序排列
+
+	-- order by 多个字段
+	-- 查询年龄在18到34岁之间的女性，身高从高到矮排序, 如果身高相同的情况下按照年龄从小到大排序
+	select * from students where (age between 18 and 34) and gender=2 order by height desc,id desc;
+
+	-- 查询年龄在18到34岁之间的女性，身高从高到矮排序, 如果身高相同的情况下按照年龄从小到大排序,
+	-- 如果年龄也相同那么按照id从大到小排序
+	select * from students where (age between 18 and 34) and gender=2 order by height desc,age asc,id desc;
+
+	-- 按照年龄从小到大、身高从高到矮的排序
+	select * from students order by age asc, height desc;
+```
+
+##### 聚合函数
+
+```sql
+-- 聚合函数
+    -- count max min sum avg round
+    
+	-- 总数 count()
+	-- 查询男性有多少人，女性有多少人
+	select * from students where gender=1;
+	select count(*) from students where gender=1;
+	select count(*) as 男性人数 from students where gender=1;
+	select count(*) as 女性人数 from students where gender=2;
+
+	-- 最大值 max()
+	-- 查询最大的年龄  先查出来，再找
+	select age from students;
+	select max(age) from students;
+
+	-- 查询女性的最高 身高
+	select max(height) from students where gender=2;
+
+	-- 最小值 min()
+	
+	-- 求和 sum()
+	-- 计算所有人的年龄总和
+	select sum(age) from students;
+	
+	-- 平均值 avg()
+	-- 计算平均年龄
+	select avg(age) from students;
+
+	-- 计算平均年龄 sum(age)/count(*)  tong
+	select sum(age)/count(*) from students;
+
+	-- 四舍五入 round(123.23 , 1) 保留1位小数  可为0
+	-- 计算所有人的平均年龄，保留2位小数
+	select round(sum(age)/count(*), 2) from students;
+	select round(sum(age)/count(*), 3) from students;
+
+	-- 计算男性的平均身高 保留2位小数
+	select round(avg(height), 2) from students where gender=1;
+	-- select name, round(avg(height), 2) from students where gender=1;
+
+	-- 需要存小数时，扩大整数倍存  3.14 * 100 -> 314
+```
+
+需要**存小数**时，存在误差，**扩大**整数倍**存**  **3.14 * 100 -> 314**
+
+##### 分组
+
+```sql
+-- 分组
+	-- 分组意义是和 聚合函数 一起用
+	-- 先分组，再从组里取数据
+
+	-- group by
+	-- 按照性别分组,查询所有的性别
+	-- 失败select name from students group by gender; 因为 name 在每组内有多个值
+	-- 失败select * from students group by gender;
+	select gender from students group by gender;
+
+	-- 计算每种性别中的人数
+	select gender,count(*) from students group by gender;
+	-- 使用的是分组后的数据
+
+	-- 计算男性的人数
+	select gender,count(*) from students where gender=1 group by gender;
+
+	-- group_concat(...)
+	-- 查询同种性别中的姓名
+ 	select gender,group_concat(name) from students where gender=1 group by gender;
+ 	select gender,group_concat(name, age, id) from students where gender=1 group by gender;
+ 	select gender,group_concat(name, "_", age, " ", id) from students where gender=1 group by gender;
+
+	-- having  是对分组后的数据进行判断
+	-- 查询平均年龄超过30岁的性别，以及姓名 having avg(age) > 30
+	select gender, group_concat(name),avg(age) from students group by gender having avg(age)>30;
+	
+	-- 查询每种性别中的人数多于2个的信息
+	select gender, group_concat(name) from students group by gender having count(*)>2;
+```
+
+##### 分页
+
+```sql
+-- 分页
+	-- limit start, count  limit要在最后
+
+	-- 限制查询出来的数据个数
+	select * from students where gender=1 limit 2;
+
+	-- 查询前5个数据
+	select * from students limit 0, 5;
+
+	-- 查询id6-10（包含）的书序
+	select * from students limit 5, 5;
+
+	-- 每页显示2个，第1个页面
+	select * from students limit 0,2;
+	-- 每页显示2个，第2个页面
+	select * from students limit 2,2;
+	-- 每页显示2个，第3个页面
+	select * from students limit 4,2;
+	-- 每页显示2个，第4个页面
+	select * from students limit 6,2; 
+	-- -----> limit (第N页-1)*每页的个数, 每页的个数;
+
+	-- 每页显示2个，显示第6页的信息, 按照年龄从小到大排序
+	-- 失败select * from students limit 2*(6-1),2;
+	-- 失败select * from students limit 10,2 order by age asc;
+	select * from students order by age asc limit 10,2;
+
+	select * from students where gender=2 order by height desc limit 0,2;
+```
+
+##### 连接查询
+
+当查询结果的列来源于多张表时，需要将多张表连接成一个大的数据集，再选择合适的列返回。mysql支持三种类型的连接查询，分别为：
+
+- 内连接查询：查询的结果为两个表匹配到的数据
+-  右连接查询：查询的结果为两个表匹配到的数据，右表特有的数据，对于左表中不存在的数据使用null填充 
+-  左连接查询：查询的结果为两个表匹配到的数据，左表特有的数据，对于右表中不存在的数据使用null填充 
+
+```sql
+-- 连接查询
+    -- select * from 表1 inner或left或right join 表2 on 表1.列 = 表2.列
+    -- 多个表 合并数据
+    
+	-- inner join ... on  内连接  交集
+	-- select ... from 表A inner join 表B;
+	select * from students inner join classes;
+
+	-- 查询 有能够对应班级的学生以及班级信息
+	select * from students inner join classes on students.cls_id=classes.id;
+
+	-- 按照要求显示姓名、班级
+	select students.*, classes.name from students inner join classes on students.cls_id=classes.id;
+	select students.name, classes.name from students inner join classes on students.cls_id=classes.id;
+
+	-- 给数据表起名字
+	select s.name, c.name from students as s inner join classes as c on s.cls_id=c.id;
+
+	-- 查询 有能够对应班级的学生以及班级信息，显示学生的所有信息，只显示班级名称
+	select s.*, c.name from students as s inner join classes as c on s.cls_id=c.id;
+	
+	-- 在以上的查询中，将班级姓名显示在第1列
+	select c.name, s.* from students as s inner join classes as c on s.cls_id=c.id;
+
+	-- 查询 有能够对应班级的学生以及班级信息, 按照班级进行排序
+	-- select c.xxx s.xxx from student as s inner join clssses as c on .... order by ....;
+	select c.name, s.* from students as s inner join classes as c on s.cls_id=c.id order by c.name;
+
+	-- 当时同一个班级的时候，按照学生的id进行从小到大排序
+	select c.name, s.* from students as s inner join classes as c on s.cls_id=c.id order by c.name,s.id;
+
+    -- 外连接  左/右
+	-- left join 左连接  以左表为基准取，没有为 null
+	-- 查询每位学生对应的班级信息
+	select * from students as s left join classes as c on s.cls_id=c.id;
+
+	-- 查询没有对应班级信息的学生
+	-- select ... from xxx as s left join xxx as c on..... where .....
+	-- select ... from xxx as s left join xxx as c on..... having .....
+	select * from students as s left join classes as c on s.cls_id=c.id having c.id is null;
+	select * from students as s left join classes as c on s.cls_id=c.id where c.id is null;
+	-- 结果中判断 最好用 having ,对原表判断 where
+
+	-- right join   on
+	-- 将数据表名字互换位置，用left join完成
+```
+
+##### 自关联
+
+```sql
+-- 自关联
+	-- 省级联动 url:http://demo.lanrenzhijia.com/2014/city0605/
+	-- 将多个表的数据在一个表中存储   结构一致
+	
+	-- create table areas(aid int primary key, atitle varchar(20), pid int);
+	-- 因为省没有所属的省份，所以可以填写为null
+	-- 城市所属的省份pid，填写省所对应的编号id
+	-- 这就是自关联，表中的某一列，关联了这个表中的另外一列，但是它们的业务逻辑含义是不一样的，城市信息的pid引用的是省信息的id
+	-- 在这个表中，结构不变，可以添加区县、乡镇街道、村社区等信息
+
+	-- 查询所有省份
+	select * from areas where pid is null;
+
+	-- 查询出山东省有哪些市  自己构建两个表
+	select * from areas as province inner join areas as city on city.pid=province.aid having province.atitle="山东省";
+	select province.atitle, city.atitle from areas as province inner join areas as city on city.pid=province.aid having province.atitle="山东省";
+
+	-- 查询出青岛市有哪些县城
+	select province.atitle, city.atitle from areas as province inner join areas as city on city.pid=province.aid having province.atitle="青岛市";
+	select * from areas where pid=(select aid from areas where atitle="青岛市")
+```
+
+##### 子查询
+
+```sql
+-- 子查询
+    -- 在一个 select 语句中,嵌入了另外一个 select 语句, 那么被嵌入的 select 语句称之为子查询语句
+    -- 子查询是嵌入到主查询中，是可以独立存在的语句，是一条完整的 select 语句
+    
+	-- 标量子查询  子查询返回的结果是一个数据(一行一列)
+	-- 查询出高于平均身高的信息
+    select * from students where height > (select avg(height) from students);
+    
+	-- 查询最高的男生信息
+	select * from students where height = 188;
+	select * from students where height = (select max(height) from students);
+
+	-- 列级子查询  返回的结果是一列(一列多行)
+	-- 查询学生的班级号能够对应的学生信息
+	select * from students where cls_id in (select id from classes);
+	-- 格式: 主查询 where 条件 in (列子查询)
+
+    -- 行级子查询  返回的结果是一行(一行多列)
+    -- 查找班级年龄最大，身高最高的学生
+    select * from students where (height,age) = (select max(height),max(age) from students);
+```
+
+##### 总结
+
+查询的完整格式
+
+```sql
+SELECT select_expr [,select_expr,...] [      
+      FROM tb_name
+      [WHERE 条件判断]
+      [GROUP BY {col_name | postion} [ASC | DESC], ...] 
+      [HAVING 条件判断]
+      [ORDER BY {col_name|expr|postion} [ASC | DESC], ...]
+      [LIMIT {[offset,]rowcount | row_count OFFSET offset}]
+]
+
+-- 完整的select语句
+select distinct *
+from 表名
+where ....
+group by ... having ...
+order by ...
+limit start,count
+```
+
+- 执行顺序为：
+
+  `from 表名` > `where ..` > `group by ..` > `select distinct *` > `having ..` > `order by ..` > `limit start,count`
+
+- 实际使用中，只是语句中**某些**部分的**组合**，而不是全部
 
 
 
